--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+
+            <div class="destination" id="amsterdam">
+                <h2>Amsterdam</h2>
+            </div>
+
+            <div class="destination" id="hungary">
+                <h2>Hungary</h2>
+            </div>
+
         </div>
     </div>
 
